bpo-37213: Handle negative line deltas correctly in the peephole optimizer